--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -199,6 +199,7 @@
   padding: 50px 25px;
   .grid {
     gap: 3.1rem;
+    display: none;
   }
   .testimonial-content {
     h2 {
